--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,9 @@
 # Note: You can set a symlink using "ln -s /home/me/folder /mnt/eml4u-drift-data"
 
 # Directory containing https://snap.stanford.edu/data/movies.txt.gz
+# Formerly: data/movies/
 AMAZON_MOVIE_REVIEWS_DIRECTORY: /mnt/eml4u-drift-data/amazon
 
-# Directory contain files gensim model files:
+# Directory containing files gensim model files:
 # https://hobbitdata.informatik.uni-leipzig.de/EML4U/2021-05-17-Amazon-Doc2Vec/
 GENSIM_MODEL_DIRECTORY: /mnt/eml4u-drift-data/gensim
