notebook for experiments of all detectors

--- a/config.yaml
+++ b/config.yaml
@@ -15,3 +15,6 @@ GENSIM_MODEL_DIRECTORY: /mnt/eml4u-drift-data/gensim
 # https://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html#lexicon
 # http://www.cs.uic.edu/~liub/FBS/opinion-lexicon-English.rar
 OPINION_WORDS_DIRECTORY: /mnt/eml4u-drift-data/opinion-words
+
+# Directory containing experiments data
+EXPERIMENTS_DIRECTORY: /mnt/eml4u-drift-data/experiments
