doc2vec twitter

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,9 @@
 # Directory containing https://snap.stanford.edu/data/movies.txt.gz
 AMAZON_MOVIE_REVIEWS_DIRECTORY: /mnt/eml4u-drift-data/amazon
 
+# Directory containing election_dataset_raw.pickle (311 MB)
+TWITTER_ELECTION_DIRECTORY: /mnt/eml4u-drift-data/twitter-election
+
 # Directory containing embeddings files
 EMBEDDINGS_DIRECTORY: /mnt/eml4u-drift-data/embeddings
 
