--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,23 @@
 # Locations of directories and files
-# Note: You can set a symlink using "ln -s /home/me/folder /mnt/eml4u-drift-data"
+# Note: You can set a symlink using "ln -s /home/me/folder /mnt/project-drift-data"
 
 # Directory containing https://snap.stanford.edu/data/movies.txt.gz
-AMAZON_MOVIE_REVIEWS_DIRECTORY: /mnt/eml4u-drift-data/amazon
+AMAZON_MOVIE_REVIEWS_DIRECTORY: /mnt/project-drift-data/amazon
 
 # Directory containing election_dataset_raw.pickle (311 MB)
-TWITTER_ELECTION_DIRECTORY: /mnt/eml4u-drift-data/twitter-election
+TWITTER_ELECTION_DIRECTORY: /mnt/project-drift-data/twitter-election
 
 # Directory containing embeddings files
-EMBEDDINGS_DIRECTORY: /mnt/eml4u-drift-data/embeddings
+EMBEDDINGS_DIRECTORY: /mnt/project-drift-data/embeddings
 
 # Directory containing files gensim model files:
-# https://hobbitdata.informatik.uni-leipzig.de/EML4U/2021-05-17-Amazon-Doc2Vec/
-GENSIM_MODEL_DIRECTORY: /mnt/eml4u-drift-data/gensim
+# https://hobbitdata.informatik.uni-leipzig.de/project/2021-05-17-Amazon-Doc2Vec/
+GENSIM_MODEL_DIRECTORY: /mnt/project-drift-data/gensim
 
 # Directory containing positive and negative words
 # https://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html#lexicon
 # http://www.cs.uic.edu/~liub/FBS/opinion-lexicon-English.rar
-OPINION_WORDS_DIRECTORY: /mnt/eml4u-drift-data/opinion-words
+OPINION_WORDS_DIRECTORY: /mnt/project-drift-data/opinion-words
 
 # Directory containing experiments data
-EXPERIMENTS_DIRECTORY: /mnt/eml4u-drift-data/experiments
+EXPERIMENTS_DIRECTORY: /mnt/project-drift-data/experiments
